Fix the nested layer of counter uncorrected when display changed

In order to update counter-reset correctly, MoveNonResetSiblingsToChildOf
is called, so the non-reset sibling will become the child of this reset
CounterNode. If this reset node is nested inside another CounterNode,
the sibling's nested layer won't be correct. So we should skip calling
MoveNonResetSiblingsToChildOf() in the nested case.

Bug: 849107
Change-Id: I8c59e18785dfec18c4bc2053e9c01041c23e4183
Reviewed-on: https://chromium-review.googlesource.com/1098867
Reviewed-by: Koji Ishii <kojii@chromium.org>
Reviewed-by: Darren Shen <shend@chromium.org>
Commit-Queue: cathie chen <cathiechen@tencent.com>
Cr-Commit-Position: refs/heads/master@{#567103}
Former-commit-id: 73dff2a04425c1c9e40f7800d900103dcb60cf2a